--- a/study/offline_rl/cql/main.tex
+++ b/study/offline_rl/cql/main.tex
@@ -44,7 +44,7 @@
 % Reference bibtex
 % style = numeric, apa, authoryear-comp
 \usepackage[backend=biber, style=authoryear-comp, natbib=true]{biblatex}
-\addbibresource{../../references.bib}
+\addbibresource{../../../references.bib}
 
 
 
@@ -254,7 +254,7 @@
     Randomly initialize $\hat{Q}^{0}$ and update $\hat{Q}^k$ and $\hat{\pi}^k$ by following rule
     \[
     \begin{gathered}
-      \hat{Q}^{k+1} \leftarrow \arg\min_Q \mbb{E}_{(s,a,r,s^\prime) \sim \mc{D}}\left[\left(r + \gamma \mbb{E}_{\textcolor{red}{a^\prime \sim \hat{\pi}^k (\cdot | s^\prime)}}[\hat{Q}^k(\textcolor{green}{s^\prime}, a^\prime)]  - Q(s,a)\right)^2\right] \\
+      \hat{Q}^{k+1} \leftarrow \arg\min_Q \mbb{E}_{(s,a,r,s^\prime) \sim \mc{D}}\left[\left(r + \gamma \mbb{E}_{\textcolor{red}{a^\prime \sim \hat{\pi}^k (\cdot | s^\prime)}}[\hat{Q}^k(\textcolor{red}{s^\prime}, a^\prime)]  - Q(s,a)\right)^2\right] \\
       \hat{\pi}^{k+1} \leftarrow \arg\max_\pi \mbb{E}_{s \sim \mc{D}} \left[\mbb{E}_{a \sim \hat{\pi}^k(\cdot|s)} \left[\hat{Q}^{k+1}(s,a)\right]\right]
     \end{gathered}
     \]
@@ -355,10 +355,10 @@
     We can this inequation as following vectorized form and finally can derive our result of theorem 1
     \[
       \begin{aligned}
-        &(I - \gamma T^\pi) \hat{Q}^\pi \leq R + \alpha \frac{\mu}{\hat{\beta}} +\frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}}}} \\
-        \implies&\hat{Q}^\pi \leq (I - \gamma T^\pi)^{-1} \left[ R + \alpha \frac{\mu}{\hat{\beta}} + \frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}}}}\right] \\
+        &(I - \gamma T^\pi) \hat{Q}^\pi \leq R + \alpha \frac{\mu}{\hat{\beta}} +\frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}(s,a)}}} \\
+        \implies&\hat{Q}^\pi \leq (I - \gamma T^\pi)^{-1} \left[ R + \alpha \frac{\mu}{\hat{\beta}} + \frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}(s,a)}}}\right] \\
         \implies &\forall s,a, \hat{Q}^\pi(s,a) \leq Q^\pi (s,a) - \alpha \left[ (I - \gamma T^\pi)^{-1}\left[\frac{\mu}{\hat{\beta}}\right]\right](s,a) \\
-        &+ \left[(I - \gamma T^\pi)^{-1} \frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}}}}\right] (s,a)
+        &+ \left[(I - \gamma T^\pi)^{-1} \frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}(s,a)}}}\right] (s,a)
       \end{aligned}
     \]
   \end{block}
@@ -366,8 +366,11 @@
 
 \begin{frame}{Conservative Off-Policy Evaluation}
   \begin{block}{Lower Bound Inequation (Proof, cont')}
-    In order to guarantee a lower bound, $\alpha$ can be chosen to cancel any potential \hypertarget{text:why_only_consider_overestimation}{overestimation incurred} by $\frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}}}}$.
-
+    In order to guarantee (w.h.p) a lower bound, $\alpha$ can be chosen to cancel any potential \hypertarget{text:why_only_consider_overestimation}{overestimation incurred} by $\frac{C_{r,T,\delta}R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}}}}$.
+    The choice of $\alpha$ that guarantees a lower bound is then given by:
+    \[
+      \alpha \cdot \min_{s,a} \left[\frac{\mu(a|s)}{\hat{\beta}(a|s)}\right]  \geq \max_{s,a} \frac{C_{r,T, \delta} R_{\text{max}}}{ (1-\gamma) \sqrt{\abs{\mc{D}(s,a)}}} \implies \alpha \geq \max_{s,a} \frac{C_{r,T,\delta} R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\mc{D}(s,a)}}} \cdot \max_{s,a} \left[\frac{\mu(a|s)}{\hat{\beta}(a|s)}\right]^{-1}
+    \]
   \end{block}
 \end{frame}
 
@@ -414,28 +417,12 @@
   \]
   \end{block}
 
-  What is the true meaning of \textcolor{red}{red} terms?
-  \begin{itemize}
-    \item Suppose that for $s$, there exists possible actions $a^1, a^2$.
-    \item Let assume $\mu(a^1|s) = 1$ and $\pi(a^1|s) = 0.5$.
-    \item Then for $(s,a^1)$, the red term becomes $\left[ Q(s,a^1) - \frac{1}{2}Q(s,a^1) \right]$.
-  \end{itemize}
-
-
-\end{frame}
-
-
-\begin{frame}{Conservative Off-Policy Evaluation}
-  % \begin{block}{Conservative Policy Evaluation (more tighten lower-bound)}
-  %   For any policy $\mu : \mc{S} \to \Delta{\mc{A}}, \supp \mu \subset \supp \beta$,
-  %   \[
-  %   \begin{aligned}
-  %     \hat{Q}^{k+1} \leftarrow &\arg \min_{Q} \alpha \cdot \left(\mbb{E}_{s \sim \mc{D}, a \sim \mu(\cdot|s)}[Q(s,a)] - \mbb{E}_{s \sim \mc{D}, a \sim \hat{\beta}(\cdot|s)} \left[Q(s,a)\right] \right) \\
-  %     &+ \frac{1}{2} \mbb{E}_{s,a,s^\prime \sim \mc{D}} \left[ \left(Q(s,a) - \hat{\mc{B}}^\pi \hat{Q}^{k}(s,a)\right)^2\right]
-  % \end{aligned}
-  % \]
-  % \end{block}
-
+  % What is the true meaning of \textcolor{red}{red} terms?
+  % \begin{itemize}
+  %   \item Suppose that for $s$, there exists possible actions $a^1, a^2$.
+  %   \item Let assume $\mu(a^1|s) = 1$ and $\pi(a^1|s) = 0.5$.
+  %   \item Then for $(s,a^1)$, the red term becomes $\left[ Q(s,a^1) - \frac{1}{2}Q(s,a^1) \right]$.
+  % \end{itemize}
   \begin{block}{(More Tighten) Lower Bound Inequation}
     For $\hat{V}^{\pi}(s) = \mbb{E}_{\pi(a|s)}$, lower-bounds the true value of the policy obtained via exact policy evaluation, $V^\pi(s) = \mbb{E}_{\pi}(a|s) [Q^\pi(s,a)]$, when $\mu=\pi$, according to:
     \[
@@ -447,6 +434,7 @@
   \end{block}
   For suitable $\alpha$, both bounds hold under sampling error and function approximation.
 \end{frame}
+
 
 \begin{frame}{Conservative Off-Policy Evaluation}
   \begin{block}{(More Tighten) Lower Bound Inequation (Proof)}
@@ -483,35 +471,33 @@
 
     \bigskip
     Now let plugin this result to sampling error.
-    Starting from \hyperlink{appendix:sampling_error}{this result},
+    By combining \hyperlink{thm:sampling_error_value_version}{this result} with previous result ($\mu = \pi$),
     \[
-      \abs{\hat{\mc{B}}^\pi \hat{Q}^k (s,a) - \mc{B}^\pi \hat{Q}^k(s,a)} \leq \frac{C_{r,T,\delta}}{\sqrt{\abs{\mc{D}(s,a)}}} \cdot \frac{R_{\text{max}}}{(1-\gamma)} \implies 
+    \begin{aligned}
+      &\abs{\hat{\mc{B}}^\pi \hat{V}^k(s) - \mc{B}^\pi \hat{V}^k(s)} \leq \frac{C_{r,T,\delta}}{\sqrt{\abs{\mc{D}(s)}}} \cdot \frac{R_{\text{max}}}{(1-\gamma)}  \\
+      \implies &\hat{V}^{k+1} (s) \leq \mc{B}^\pi \hat{V}^k (s) -  \alpha \mbb{E}_{\alpha \sim \pi(\cdot|s) }\left[\frac{\pi(a|s)}{\hat{\beta}(a|s)}-1\right] + \frac{C_{r,T,\delta}}{\sqrt{\abs{\mc{D}(s)}}} \cdot \frac{R_{\text{max}}}{(1-\gamma)} \\
+      \implies & \hat{V}^\pi (s) \leq \mc{B}^\pi \hat{V}^\pi (s) - \alpha \mbb{E}_{a \sim \pi(\cdot|s)} \left[\frac{\pi(a|s)}{\hat{\beta}(a|s)} -1\right] + \frac{C_{r,T,\delta}}{\sqrt{\abs{\mc{D}(s)}}} \cdot \frac{R_{\text{max}}}{(1-\gamma)} \\
+      \implies & \hat{V}^\pi = (I - \gamma T^\pi)^{-1} r^\pi - \alpha (I - \gamma T^\pi)^{-1} \mbb{E}_{a \sim \pi(\cdot|s)} \left[\frac{\pi(a|s)}{\hat{\beta}(a|s)}-1\right] + (I - \gamma T^\pi)^{-1} \frac{C_{r,T,\delta}}{\sqrt{\abs{\mc{D}(s)}}} \cdot \frac{R_{\text{max}}}{(1-\gamma)}
+    \end{aligned}
     \]
   \end{block}
 \end{frame}
 
 \begin{frame}{Conservative Off-Policy Evaluation}
-  \hypertarget{thm:2_underestimate}{\begin{block}{Make $\hat{V}^{k+1}$ Lower than $\mc{B}^\pi \hat{V}^{k}$}
-    We want to make $\hat{V}^{k+1} \leq \mc{B}^{\pi}\hat{V}^{k}$ always holds.
-    \begin{itemize}
-      \item if $\pi(a|s) = \mu(a|s)$, then 
-      \[
-      \begin{aligned}
-      \mbb{E}_{a \sim \pi(\cdot|s)}\left[\frac{\mu(a|s)}{\beta(a|s)}-1 \right] &= \sum_a (\pi(a|s) - \beta (a|s)+ \beta(a|s)) \left[\frac{\pi(a|s)}{\beta(a|s)}-1 \right] \\
-      & = \sum_a \frac{(\pi(a|s) - \beta(a|s))^2}{\beta(a|s)} + \sum_a \pi(a|s) - \sum_a \beta(a|s) \\
-      & = \sum_a \frac{(\pi(a|s) - \beta(a|s))^2}{\beta(a|s)} \geq 0
-      \end{aligned}
-     \]
-     \item Else, preserve $\hat{V}^{k+1} \leq \hat{V}^{k}$ by turning $\left[\frac{\mu(a|s)}{\hat{\beta}(a|s)} -1\right]$ to \hypertarget{thm:2_absolute}{$\abs{\frac{\mu(a|s)}{\hat{\beta}(a|s)}-1}$}
-    \end{itemize}
-  \end{block}}
+  \begin{block}{(More Tighten) Lower Bound Inequation (Proof)}
+    To guarantee (w.h.p) the underestimation choicing of $\alpha$ should follows under condition:
+    \[  
+      \alpha \geq \max_{s,a} \frac{C_{r,T,\delta} R_{\text{max}}}{(1-\gamma) \sqrt{\abs{\textcolor{magenta}{\mc{D}(s)}}}} \cdot \max_{s} \left[ \sum_{a \in \supp \hat{\beta}(\cdot|s)}  \pi(a|s) \left[\frac{\pi(a|s)}{\hat{\beta}(a|s)}-1\right]\right]^{-1}
+    \]
+  \end{block}
 \end{frame}
+
 
 \begin{frame}{Conservative Q-Learning}
   General approach for offline policy learning, which is called \underline{Conservative Q-Learning (CQL)}.
   \begin{itemize}
-    \item We can obtain Q-values that lower-bound the value of a policy $\pi$ by solving second approach with $\mu = \pi$.
-    \item So, just update $\mu$ to maximize current Q-function iterate
+    \item We can obtain estimated Q-values that lower-bound the true Q-value of a policy $\pi$ by integrating $\mu = \pi$ to \hyperlink{eq:2}{equation 2}.
+    \item How can we optimize policy with this estimated Q-value? $\rightarrow$ Policy Iteration
   \end{itemize}
   \begin{block}{Conservative Q-Learning (CQL)}
     \[
@@ -521,6 +507,45 @@
     \end{aligned}
     \]
     where $\mc{R}(\mu)$ is particular choices of regularizer
+  \end{block}
+
+    \begin{block}{Theorem3.3 (CQL Learns lower-bounded Q-values)}
+    For simplicity, theorem is developed under \hypertarget{thm:3_3_assumption}{\ti{ignoring the sampling error (i.e. $\hat{\mc{B}}^\pi = \mc{B}^\pi$) and $\mu = \pi_{\hat{Q}^k}$.}}
+
+    Let $\pi_{\hat{Q}^k}(a|s) \propto \exp(\hat{Q}^k(s,a))$ and assume that $D_{\text{TV}}(\hat{\pi}^{k+1}, \pi_{\hat{Q}^k}(a|s)) \leq \epsilon$ (i.e., $\hat{\pi}^{k+1}$ changes slowly w.r.t to $\hat{Q}^k$).
+    Then, the policy value under $\hat{Q}^k$, lower-bounds the actual policy value, $\hat{V}^{k+  1} (s) \leq V^{k+1}(s)$ if
+    \[
+      \mbb{E}_{a \sim \pi_{\hat{Q}^k}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)}-1\right] \geq \max_{a \in \supp \hat{\beta}(\cdot|s)} \left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} \right]\cdot \epsilon
+    \]
+  \end{block}
+\end{frame}
+
+\begin{frame}{Conservative Q-Learning}
+  \begin{block}{Theorem3.3 Proof (cont')}
+    In CQL framework, the update of Q value $\hat{Q}^{k+1}$ can be written by
+    \[
+      \hat{Q}^{k+1}(s,a) = \mc{B}^{\pi}\hat{Q}^{k} (s,a) - \alpha \left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} - 1\right]
+    \]
+    Then these leads to
+    \[
+      \begin{aligned}
+        \mbb{E}_{a \sim \hat{\pi}^{k+1} (\cdot|s)} [\hat{Q}^{k+1} (s,a)] &= \mbb{E}_{a \sim \hat{\pi}^{k+1}(\cdot|s)} [\mc{B}^\pi \hat{Q}^k(s,a)] - \alpha \left[\mbb{E}_{a \sim \pi^{k+1}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)} -1 \right] \right] \\
+        &= \mbb{E}_{a \sim \hat{\pi}^{k+1}(\cdot | s)} [\mc{B}^\pi \hat{Q}^{k}(s,a)] - \alpha \left[\underbrace{\mbb{E}_{a \sim \pi^{k+1}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} -1\right]}_{\text{underestimation, (a)}} \right] \\
+         &+ \alpha \left[ \underbrace{\sum_a \left( \pi_{\hat{Q}^k}(a|s) - \hat{\pi}^{k+1}(a|s)\right) \frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta} (a|s)}}_{\text{(b)}}  \right]
+      \end{aligned}
+    \]
+    To make sure underestimate, i.e. $\hat{Q}^{\pi} \leq Q^\pi$, (a) $\geq$ (b) should be satisfied.
+    $\left( \text{Note that }\sum_a (\pi_{\hat{Q}^k}(a|s))-\hat{\pi}^{k+1}(a|s) \leq D_{\text{TV}}(\pi_{\hat{Q}^k}, \hat{\pi}^{k+1}) = \sum_a \abs{\pi_{\hat{Q}^k}(a|s) - \hat{\pi}^{k+1} (a|s)}\right)$
+  \end{block}
+\end{frame}
+
+\begin{frame}{Conservative Q-Learning}
+  \begin{block}{Theorem3.3 Proof (cont')}
+    With the inequality $\epsilon \cdot \max_{a} \frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)} \geq D_{\text{TV}}(\pi_{\hat{Q}^k}, \hat{\pi}^{k+1}) \cdot \max_a \frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)} \geq \sum_a \left(\pi_{\hat{Q}^k}(a|s) - \hat{\pi}^{k+1}(a|s)\right) \cdot \frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)}$,
+    Lower bound guarantee inequation has induced by
+    \[
+      \mbb{E}_{a \sim \pi^{k+1}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} -1\right] \geq \epsilon \cdot \max_{a \in \supp \hat{\beta}(\cdot | s)} \frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)}
+    \]
   \end{block}
 \end{frame}
 
@@ -595,45 +620,86 @@
 \end{frame}
 
 \begin{frame}{Conservative Q-Learning}
-  \begin{block}{Theorem3.3 (CQL Learns lower-bounded Q-values)}
-    For simplicity, theorem is developed under \hypertarget{thm:3_3_assumption}{\ti{ignoring the sampling error (i.e. $\hat{\mc{B}}^\pi = \mc{B}^\pi$) and $\mu = \pi_{\hat{Q}^k}$.}}
-
-    Let $\pi_{\hat{Q}^k}(a|s) \propto \exp(\hat{Q}^k(s,a))$ and assume that $D_{\text{TV}}(\hat{\pi}^{k+1}, \pi_{\hat{Q}^k}(a|s)) \leq \epsilon$ (i.e., $\hat{\pi}^{k+1}$ changes slowly w.r.t to $\hat{Q}^k$).
-    Then, the policy value under $\hat{Q}^k$, lower-bounds the actual policy value, $\hat{V}^{k+  1} (s) \leq V^{k+1}(s)$ if
+  \begin{block}{Theorem3.4:CQL is gap-expanding}
+    At any iteration $k$, CQL expands the difference in expected Q-values under the behavior policy $\pi_\beta$ and $\mu_k$, such that for large enough values of $\alpha_k$, we have that 
     \[
-      \mbb{E}_{a \sim \pi_{\hat{Q}^k}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)}-1\right] \geq \max_{a \in \supp \hat{\beta}(\cdot|s)} \left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} \right]\cdot \epsilon
+      \forall s, \mbb{E}_{\beta(\cdot|s)}[\hat{Q}^k (s,a)] - \mbb{E}_{\mu_k (\cdot|s)}[\hat{Q}^k (s,a)] > \mbb{E}_{\beta(\cdot|s)}[Q^k(s,a)] - \mbb{E}_{\mu_k(\cdot|s)}[Q^k(s,a)]
     \]
   \end{block}
 \end{frame}
 
 \begin{frame}{Conservative Q-Learning}
-  \begin{block}{Theorem3.3 Proof (cont')}
-    In CQL framework, the update of Q value $\hat{Q}^{k+1}$ can be written by
+  \begin{block}{Theorem3.4:CQL is gap-expanding proof}
+    Before starting proof, let ignore the sampling error and later incorporating it into the choice of $\alpha$.
+    Starting from update rule
     \[
-      \hat{Q}^{k+1}(s,a) = \mc{B}^{\pi}\hat{Q}^{k} (s,a) - \alpha \left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} - 1\right]
+      \hat{Q}^{k+1} (s,a) = \mc{B}^{\pi_k} \hat{Q}^k (s,a) - \alpha \frac{\mu_k (a|s) - \beta (a|s)}{\beta (a|s)}
     \]
-    Then these leads to
+    Then from previous equation, we can derive two equations
+    \begin{itemize}
+      \item \[
+      \mbb{E}_{\mu_k(\cdot|s)}[\hat{Q}^{k+1} (s,a)]= \mbb{E}_{\mu(\cdot|s)}[\mc{B}^{\pi_k} \hat{Q}^k (s,a)] - \alpha_k \underbrace{\mbb{E}_{\mu(\cdot|s)}\left[\frac{\mu_k (a|s) - \beta(a|s)}{\beta(a|s)}\right]}_{\geq 0}
+      \]
+      \item \[
+       \mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1}(s,a)] = \mbb{E}_{\beta(\cdot|s)}[\mc{B}^{\pi_k} \hat{Q}^k (s,a)] - \alpha \underbrace{\mbb{E}_{\beta(\cdot|s)}\left[\frac{\mu_k (a|s) - \beta(a|s)}{\beta(a|s)}\right]}_{= 0}
+      \]
+    \end{itemize}
+    Subtracting second equation by first equation, we obtain
     \[
-      \begin{aligned}
-        \mbb{E}_{a \sim \hat{\pi}^{k+1} (\cdot|s)} [\hat{Q}^{k+1} (s,a)] &= \mbb{E}_{a \sim \hat{\pi}^{k+1}(\cdot|s)} [\mc{B}^\pi \hat{Q}^k(s,a)] - \alpha \left[\mbb{E}_{a \sim \pi^{k+1}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)} -1 \right] \right] \\
-        &= \mbb{E}_{a \sim \hat{\pi}^{k+1}(\cdot | s)} [\mc{B}^\pi \hat{Q}^{k}(s,a)] - \alpha \left[\underbrace{\mbb{E}_{a \sim \pi^{k+1}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} -1\right]}_{\text{underestimation, (a)}} \right] \\
-         &+ \alpha \left[ \underbrace{\sum_a \left( \pi_{\hat{Q}^k}(a|s) - \hat{\pi}^{k+1}(a|s)\right) \frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta} (a|s)}}_{\text{(b)}}  \right]
-      \end{aligned}
+    \begin{aligned}
+      \mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1}(s,a)] - \mbb{E}_{\mu(\cdot|s)}[\hat{Q}^{k+1}(s,a)] &= \mbb{E}_{\beta(\cdot|s)}[\mc{B}^{\pi_k} \hat{Q}^k (s,a)] - \mbb{E}_{\mu(\cdot|s)}[\mc{B}^{\pi_k} \hat{Q}^k (s,a)] \\
+      &- \alpha_k \mbb{E}_{\mu(\cdot|s)}\left[\frac{\mu_k(a|s) - \beta(a|s)}{\beta(a|s)}\right]
+    \end{aligned}
     \]
-    To make sure underestimate, i.e. $\hat{Q}^{\pi} \leq Q^\pi$, (a) $\geq$ (b) should be satisfied.
-    $\left( \text{Note that }\sum_a (\pi_{\hat{Q}^k}(a|s))-\hat{\pi}^{k+1}(a|s) \leq D_{\text{TV}}(\pi_{\hat{Q}^k}, \hat{\pi}^{k+1}) = \sum_a \abs{\pi_{\hat{Q}^k}(a|s) - \hat{\pi}^{k+1} (a|s)}\right)$
   \end{block}
 \end{frame}
 
 \begin{frame}{Conservative Q-Learning}
-  \begin{block}{Theorem3.3 Proof (cont')}
-    With the inequality $\epsilon \cdot \max_a \frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)} \geq D_{\text{TV}}(\pi_{\hat{Q}^k}, \hat{\pi}^{k+1}) \cdot \max_a \frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)} \geq \sum_a \left(\pi_{\hat{Q}^k}(a|s) - \hat{\pi}^{k+1}(a|s)\right) \cdot \frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)}$,
-    Lower bound guarantee inequation has induced by
+  \begin{block}{Theorem3.4:CQL is gap-expanding proof (cont')}
+    By subtracting $\mbb{E}_{\beta(\cdot|s)}[\textcolor{magenta}{Q^{k+1}(s,a)}] - \mbb{E}_{\mu(\cdot|s)}[\textcolor{magenta}{Q^{k+1}(s,a)}]$,
+    % \[
+    % \begin{aligned}
+    %   &\mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1}(s,a)] - \mbb{E}_{\beta(\cdot|s)}[Q^{k+1}(s,a)] = \mbb{E}_{\beta(\cdot|s)}[\mc{B}^{\pi_k}\hat{Q}^k(s,a)] - \mbb{E}_{\mu(\cdot|s)}[\mc{B}^{\pi_k}\hat{Q}^{k+1}(s,a)]  \\
+    %   & - \mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1}(s,a)] - \mbb{E}_{\mu(\cdot|s)}[\hat{Q}^{k+1}(s,a)] - \alpha_k \mbb{E}_{\mu(\cdot|s)}\left[\frac{\mu_k(a|s)}{\beta(a|s)} -1\right]\\
+    %   \implies &\mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1}(s,a)] - \mbb{E}_{\beta(\cdot|s)}[Q^{k+1}(s,a)] = \mbb{E}_{\beta(\cdot|s)}\left[\hat{Q}^{k+1}(s,a) + \alpha_k \cdot \left(\frac{\mu(a|s)}{\beta(a|s)}-1 +1\right)\right] \\
+    %   & - \mbb{E}_{\mu(\cdot|s)}\left[\hat{Q}^{k+1}(s,a) + \alpha_k \cdot \left(\frac{\mu(a|s)}{\beta(a|s)}-1+1 \right)\right] -\mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1}(s,a)] - \mbb{E}_{\mu_k(\cdot|s)}[\hat{Q}^{k+1}(s,a)] \\
+    %   &-\alpha_k \mbb{E}_{\mu_k(\cdot|s)}\left[\frac{\mu_k(a|s)}{\beta(a|s)}-1\right] \\
+    %   \implies & \mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1}(s,a)]  - \mbb{E}_{\beta(\cdot|s)}[Q^{k+1}(s,a)] = \mbb{E}_{\beta(\cdot|s)}[]
+    % \end{aligned}
+    % \]
     \[
-      \mbb{E}_{a \sim \pi^{k+1}(\cdot|s)}\left[\frac{\pi_{\hat{Q}^k}(a|s)}{\hat{\beta}(a|s)} -1\right] \geq \epsilon \cdot \max_{a \in \supp \hat{\beta}(\cdot | s)} \frac{\pi_{\hat{Q}^k(a|s)}}{\hat{\beta}(a|s)}
+    \begin{aligned}
+      &\mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}] - \mbb{E}_{\mu(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}] = \mbb{E}_{\beta(\cdot|s)}\left[\mc{B}^{\pi_k} \hat{Q}^{k}\right] -\mbb{E}_{\mu(\cdot|s)}\left[\mc{B}^{\pi_k} \hat{Q}^{k}\right] \\
+      & - \mbb{E}_{\beta(\cdot|s)} [Q^{k+1}] + \mbb{E}_{\mu(\cdot|s)}[Q^{k+1}]  - \alpha_k \mbb{E}_{\mu(\cdot|s)} \left[\frac{\mu_k}{\beta} -1\right]\\
+      \implies& \mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}] - \mbb{E}_{\mu(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}] = \mbb{E}_{\beta(\cdot|s)}\left[\mc{B}^{\pi_k} \left(\hat{Q}^{k} - Q^k\right)\right] - \mbb{E}_{\mu_k(\cdot|s)}\left[\mc{B}^{\pi_k}\left(\hat{Q}^k - Q^k\right)\right] \\
+      &- \alpha_k \mbb{E}_{\mu_k(\cdot|s)}\left[\frac{\mu_k}{\beta} - 1 \right] \\
+      \implies &\mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}] = \mbb{E}_{\mu(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}] + \underbrace{\mbb{E}_{\beta(\cdot|s)}\left[\mc{B}^{\pi_k}\left(\hat{Q}^k -Q^k\right)\right] - \mbb{E}_{\mu_k(\cdot|s)}\left[\mc{B}^{\pi_k}\left(
+        \hat{Q}^k- Q^k\right)\right]}_{(a)} \\
+        &- \underbrace{\alpha_k \mbb{E}_{\mu_k(\cdot|s)}\left[\frac{\mu_k}{\beta} -1 \right]}_{(b)}
+    \end{aligned}
+    \]
+    From above equation, we can notice that if (a) $<$ (b), then $\mbb{E}_{\beta(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}] > \mbb{E}_{\mu_k(\cdot|s)}[\hat{Q}^{k+1} - Q^{k+1}]$ holds. So
+    \[
+      \alpha_k > \max \left(\frac{\sum_a (\beta(a|s)-\mu_k(a|s))\left[\mc{B}^{\pi_k} (\hat{Q}^k - Q^k)(s,a)\right]}{\mbb{E}_{\mu_k(\cdot|s)}[\frac{\mu_k}{\beta} -1]}, 0\right)
     \]
   \end{block}
 \end{frame}
+
+\begin{frame}{Conservative Q-Learning}
+  \begin{block}{Theorem3.4:CQL is gap-expanding proof (cont')}
+    Let incorporate sampling error.
+    Recall that for any $Q$, $Q \leq \frac{R_{\text{max}}}{1- \gamma}$ holds and $\forall Q, \sum_a (\beta(a|s) - \mu_k(a|s)) \cdot \mc{B}^{\pi_k}Q(s,a) \leq D_{\text{TV}}(\beta, \mu_k)\cdot \frac{R_{\text{max}}}{1 - \gamma}$ holds.
+    Starting from 
+    \[
+    \abs{\hat{\mc{B}^{\pi_k}}\left(\hat{Q}^k - Q^k\right) - \mc{B}^{\pi_k} \left(\hat{Q}^k -Q^k\right)} \leq \frac{2 \cdot C_{r,T,\delta}R_{\text{max}}}{1 - \gamma}
+    \],
+    Following expressions guarantees conservatism with high property,
+    \[
+      \alpha_k > \max \left(\frac{\sum_a (\beta(a|s)-\mu_k(a|s))\left[\mc{B}^{\pi_k} (\hat{Q}^k - Q^k)(s,a)\right]}{\mbb{E}_{\mu_k(\cdot|s)}[\frac{\mu_k}{\beta} -1]} + D_{\text{TV}}()\right)
+    \]
+  \end{block}
+\end{frame}
+
 
 \begin{frame}{Implementation}
   In this paper, authors adopt this CQL framework to
@@ -674,13 +740,44 @@
     Under this assumption, the difference between the empirical Bellman operator and the actual Bellman operator can be bounded
     \[
       \begin{aligned}
-        \abs{\hat{\mc{B}}^\pi \hat{Q}^k (s,a) - \mc{B}^\pi \hat{Q}^k (s,a)} &= \abs{ (r - r(s,a)) + \gamma \sum_{x^\prime} \left(\hat{T}(s^\prime|s,a) - T(s^\prime |s,a)\right)\mbb{E}_{\pi(\cdot | s^\prime)}\left[ \hat{Q}^k (s^\prime, a^\prime)\right]} \\
+        \abs{\hat{\mc{B}}^\pi \hat{Q}^k (s,a) - \mc{B}^\pi \hat{Q}^k (s,a)} &= \abs{ (r - r(s,a)) + \gamma \sum_{s^\prime} \left(\hat{T}(s^\prime|s,a) - T(s^\prime |s,a)\right)\mbb{E}_{\pi(\cdot | s^\prime)}\left[ \hat{Q}^k (s^\prime, a^\prime)\right]} \\
         & \leq \abs{r - r(s,a)} + \gamma \abs{\sum_{s^\prime} \left(\hat{T}(s^\prime |s,a) - T(s^\prime |s,a)\right)\mbb{E}_{\pi(\cdot | s^\prime)}\left[\hat{Q}^k (s^\prime, a^\prime)\right]} \\
-        &\abs{r - r(s,a)} + \gamma \abs{\sum_{s^\prime} \left(\hat{T}(s^\prime|s,a) - T(s^\prime|s,a)\right)}_1 \abs{\mbb{E}_{\pi(\cdot | s^\prime)}\left[\hat{Q}^k(s^\prime, a^\prime)\right]}_\infty \\
+        &\leq \abs{r - r(s,a)} + \gamma \abs{\sum_{s^\prime} \left(\hat{T}(s^\prime|s,a) - T(s^\prime|s,a)\right)}_1 \abs{\mbb{E}_{\pi(\cdot | s^\prime)}\left[\hat{Q}^k(s^\prime, a^\prime)\right]}_\infty \\
         &\leq \frac{C_{r,\delta}}{\sqrt{\abs{\mc{D}(s,a)}}} + \frac{C_{T,\delta}}{\sqrt{\abs{\mc{D}(s,a)}}} \cdot \frac{2\gamma R_{\text{max}}}{(1-\gamma)} = \frac{C_{r,T,\delta}}{\sqrt{\abs{\mc{D}(s,a)}}} \cdot \frac{R_{\text{max}}}{(1-\gamma)}
       \end{aligned}
     \]
   \end{block}
+\end{frame}
+
+\begin{frame}{Appendix}
+  \begin{block}{Sampling Error of Empirical Bellman Operator (Cont')}
+    We can also derive sampling error combined with value function.
+    \[
+      \begin{aligned}
+      \abs{\hat{\mc{B}}^\pi \hat{V}^k(s) - \mc{B}^\pi \hat{V}^k(s)} &= \abs{\mbb{E}_{a \sim \pi(\cdot|s)}\left[(r-r(s,a)) + \gamma \sum_{s^\prime} \left( \hat{T}(s^\prime|s,a) - T(s^\prime|s,a) \right) \hat{V}^k(s^\prime) \right]}\\
+      &\leq \abs{\mbb{E}_{a \sim \pi(\cdot|s)} \left[(r - r(s,a))\right]} + \gamma \abs{\mbb{E}_{a \sim \pi(\cdot|s)}\left[\sum_{s^\prime}(\hat{T}(s^\prime|s,a) - T(s^\prime|s,a))\right]\hat{V}^k(s^\prime)}\\
+      &\leq \frac{C_{r,\delta}}{\sqrt{\abs{\hypertarget{thm:sampling_error_value_version}{\textcolor{magenta}{\mc{D}(s)}}}}} + \frac{C_{T,\delta}}{\sqrt{\abs{\textcolor{magenta}{\mc{D}(s)}}}} \cdot \frac{ 2\gamma R_{\text{max}}}{(1-\gamma)} = \frac{C_{r,T,\delta}}{\sqrt{\abs{\textcolor{magenta}{\mc{D}(s)}}}} \cdot \frac{R_{\text{max}}}{(1-\gamma)}
+      \end{aligned}
+    \]
+  \end{block}
+\end{frame}
+
+\begin{frame}{Appendix}
+    \hypertarget{thm:2_underestimate}{\begin{block}{Make $\hat{V}^{k+1}$ Lower than $\mc{B}^\pi \hat{V}^{k}$}
+    We want to make $\hat{V}^{k+1} \leq \mc{B}^{\pi}\hat{V}^{k}$ always holds.
+    \begin{itemize}
+      \item if $\pi(a|s) = \mu(a|s)$, then 
+      \[
+      \begin{aligned}
+      \mbb{E}_{a \sim \pi(\cdot|s)}\left[\frac{\mu(a|s)}{\beta(a|s)}-1 \right] &= \sum_a (\pi(a|s) - \beta (a|s)+ \beta(a|s)) \left[\frac{\pi(a|s)}{\beta(a|s)}-1 \right] \\
+      & = \sum_a \frac{(\pi(a|s) - \beta(a|s))^2}{\beta(a|s)} + \sum_a \pi(a|s) - \sum_a \beta(a|s) \\
+      & = \sum_a \frac{(\pi(a|s) - \beta(a|s))^2}{\beta(a|s)} \geq 0
+      \end{aligned}
+     \]
+     \item Else, preserve $\hat{V}^{k+1} \leq \hat{V}^{k}$ by turning $\left[\frac{\mu(a|s)}{\hat{\beta}(a|s)} -1\right]$ to \hypertarget{thm:2_absolute}{$\abs{\frac{\mu(a|s)}{\hat{\beta}(a|s)}-1}$}
+    \end{itemize}
+  \end{block}}
+
 \end{frame}
 
 \begin{frame}{Question}
@@ -694,6 +791,7 @@
     \item How to prove the fixed point exists in thorem 1?
     \item What is the Lagrangian Dual gradient descent
     \item \hyperlink{thm:3_3_assumption}{Are these assumptions correct?}
+    \item \hyperlink{thm:sampling_error_value_version}{In consideration of value sampling error, is it true?}
   \end{itemize}
 \end{frame}
 
